# languageDetectinator

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
data/meta/: languages.txt
data/processed/: cs.txt  cs_pruned.txt  de.txt  de_pruned.txt  en.txt  en_pruned.txt  fr.txt  fr_pruned.txt  sv.txt  sv_pruned.txt
data/raw/: ar_text.txt  cs.txt  cs_full.txt  cs_text.txt  de_full.txt  de_text.txt  en.txt  en_full.txt  en_text.txt  es_text.txt  fr.txt  fr_full.txt  fr_text.txt  ja_text.txt  languageDictionaries.txt  pl_text.txt  pt_text.txt  ru_text.txt  sv.txt  sv_full.txt  topics.csv
models/: tokenizer.json
scripts/: BPEPredicting.py  cleanData.py  generateCopy.py  generateData.py  generateTokenData.py  pytorchTutorial.py  test.py  trainModels.py  trainTokenizer.py
src/languageDetectinator/: datasets.py  models.py
tests/: test_Language.py  test_Vocabulary.py
