[metadata]
name = languageDetectinator
description = NN program to detect the language of a given word
author = Andrew Younger
license = MIT
license_file = LICENSE

[options]
packages = 
    languageDetectinator
install_requires = 
    pandas>=1.3.4
    numpy>=1.23.1
    torch>=2.0.0
    wikipedia>=1.4.0
    unidecode>=1.3.6
    scikit-learn>=1.2.2
    tokenizers>=0.13.3
python_requires = >=3.8
package_dir =
    =src

[options.extras_require]
testing =
    pytest-cov>=4.0.0
    tox>=4.3.5
    mypy>=0.991
    flake8>=6.0.0
    pytest>=7.2.1

[options.package_data]
    languageDetectinator = py.typed

[flake8]
max-line-length=160